--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,5 +1,3 @@
-
-
 .header {
     /* 
     background-color: var(--colorBackgroundNavbar); 
@@ -7,7 +5,7 @@
     & .header__container-title {
         background-color: var(--colorBackgroundNavbar);
         & .header__container-title__content-title {
-
+            & h1 { color: var(--colorItemsNavbar); }
         }
     }
     & .header__nav {
@@ -35,7 +33,7 @@
                     display: flex;
                     align-items: center;
                     flex-direction: column-reverse;
-                    color: var(--colorItemsNavbar);
+                    & i, span { color: var(--colorItemsNavbar); }
                 }
             }
         }
