--- a/public/css/index.css
+++ b/public/css/index.css
@@ -24,8 +24,81 @@
 }
  */
 
+.main__section-container-profile {
+    text-align: center;
+    & .main__section-container-profile__content-img { /* 
+        border: 1px solid rgb(208, 208, 208); */
+        transform: rotateZ(50deg) skew(-2deg);
+        box-shadow: 0px 0px 20px rgb(255, 255, 255);
+        border-radius: 50px;
+        width: 130px;
+        height: 130px;
+        margin: 30px auto;
+        overflow: hidden;
+        & img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center;
+            transform: scale(1.3) rotateZ(-50deg);
+        }
+    }
+    & h2 {
+        width: max-content;
+        overflow: hidden;
+        margin: auto;
+        text-wrap: nowrap;
+        & span {
+            overflow: hidden;
+            display: inline-block;
+            animation: profileTitleWriting 5s steps(40) infinite alternate, profileTitleWaiting .5s infinite;
+            letter-spacing: .1em;
+            border-right: 1px solid #ffffff;
+            padding-right: 3px;
+            font-size: .9em;
+            color: rgb(0, 242, 255);
+        }
+    }
+    & h4 {
+        margin: 10px 0;
+        color: rgb(23, 213, 255);
+        & span {
+            color: rgb(158, 158, 158);
+        }
+    }
+    & .main__section-container-profile__container-social {
+        margin: 20px;
+        & i {
+            margin: 10px;
+            font-size: 1.5em;
+        }
+        & i:nth-child(1) {
+            color: rgb(0, 34, 255);
+        }
+        & i:nth-child(2) {
+            color: rgb(112, 37, 193);
+        }
+        & i:nth-child(3) {
+            color: rgb(21, 223, 14);
+        }
+        & i:nth-child(4) {
+            color: rgb(0, 132, 255);
+        }
+        & i:nth-child(5) {
+            color: rgb(0, 34, 255);
+        }
+    }
+}
 
- 
+@keyframes profileTitleWriting {
+    0% { width: 0%; }
+    30% { width: 100% }
+}
+
+@keyframes profileTitleWaiting {
+    from { border-color: transparent; }
+    to { border-color: #ffffff; }
+}
 
 
 
