--- a/public/css/index.css
+++ b/public/css/index.css
@@ -251,7 +251,8 @@
             left: 0;
             top: 0;
             z-index: -10;
-        }/* 
+        }
+        /* 
         & >a:nth-child(2):hover {
             background: url('../img/bot\ telegram.jpg');
             background-position: center;
