--- a/public/css/header.css
+++ b/public/css/header.css
@@ -4,13 +4,16 @@
     */
     & .header__container-title {
         background-color: var(--colorBackgroundNavbar);
+        padding: 10px;
         & .header__container-title__content-title {
-            & h1 { color: var(--colorItemsNavbar); }
+            & h1 { color: #3aaaff; }
         }
     }
     & .header__nav {
-        background-color: var(--colorBackgroundNavbar);
-        backdrop-filter: blur(5px);
+        z-index: 100000;
+        background-color: #0091ffbe;
+        backdrop-filter: blur(3px);
+        box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.888);
         display: flex;
         justify-content: center;
         align-items: center;
